--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myflix-client",
   "version": "1.0.0",
   "description": "myFlix client side.",
-  "main": "src/index.html",
+  "default": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/SGF-MMXXI/myFlix-client/issues"
   },
-  "homepage": "https://github.com/SGF-MMXXI/myFlix-client#readme"
+  "homepage": "https://github.com/SGF-MMXXI/myFlix-client#readme",
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
