--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "myflix-client",
   "version": "1.0.0",
   "description": "myFlix client side.",
+  "browserslist": [
+    "last 3 Chrome versions"
+],
   "default": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +22,9 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-rc.0",
+    "parcel-bundler": "^1.12.5"
   }
 }
