--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "myFlix client side.",
   "browserslist": [
     "last 3 Chrome versions"
-],
+  ],
   "default": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/SGF-MMXXI/myFlix-client#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
