--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/SGF-MMXXI/myFlix-client#readme",
   "dependencies": {
     "axios": "^0.24.0",
+    "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
